--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^11.3.29",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
+    "node-appwrite": "^13.0.0",
     "query-string": "^9.1.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
